--- a/FrontEnd/angular101lab/src/index.html
+++ b/FrontEnd/angular101lab/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/bootstrap.css">
+  <link rel="stylesheet" href="./css/site.css">
   <meta charset="utf-8">
   <title>Angular101lab</title>
   <base href="/">
